# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = Pyterate
version = attr: Pyterate.__version__
url = https://github.com/FabriceSalvaire/Pyterate
# download_url =
project_urls =
    Documentation = https://fabricesalvaire.github.io/Pyterate
    Code = https://github.com/FabriceSalvaire/Pyterate
    Issue Tracker = https://github.com/FabriceSalvaire/Pyterate/issues
license = GPLv3
# license_file =
license_files = LICENSE.txt
author = Fabrice SALVAIRE
author_email = fabrice.salvaire@orange.fr
maintainer = Fabrice SALVAIRE
maintainer_email = fabrice.salvaire@orange.fr
description = Pyterate is a Sphinx add-ons to generate API documentation using autogen and litterate programming documentation for Python projects.
# long_description = file: README.rst
# , CHANGELOG.rst, LICENSE.rst
long_description_content_type = text/x-rst
keywords = sphinx, autogen, documentation, generator, builder, literate, programming
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.4
    Topic :: Software Development :: Documentation
platforms = any
# provides =
# requires =
# obsoletes =

[options]
packages = find:
scripts =
python_requires = >=3.4
setup_require = setuptools
# install_requires should declare the loosest possible dependency versions that are still workable
# https://packaging.python.org/discussions/install-requires-vs-requirements/
install_requires =
    Jinja2
    PyYAML >=3.10
    astunparse
    jupyter
    jupyter-client
    nbformat
    sphinx >=3
    sphinxcontrib-getthecode >=1.2
zip_safe = False
# Look in MANIFEST.in
include_package_data = True

[options.packages.find]
exclude =
    tasks
    unit-test

[options.entry_points]
console_scripts =
    pyterate = Pyterate.Scripts.pyterate:main
    pyterate_rst_api = Pyterate.Scripts.pyterate_rst_api:main

[options.package_data]
    Pyterate.Config = logging.yml
    Pyterate.ApiRstFactory = templates/*.jinja
    Pyterate.RstFactory = templates/*.jinja

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 100
